Alignment issue fix - 2

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
 	background-color: #222;
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
+	margin: 0px;
 }
 
 .prof_pic {
